fix(docker): fix libslirp not found issue

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,25 +1,25 @@
 # syntax=docker.io/docker/dockerfile-upstream:1.12.1-labs
 
+#### prepare tools
+FROM rust:1.85 AS tools
+# foundry
+RUN set -eux; \
+  apt-get update && apt-get install -y --no-install-recommends curl ca-certificates git; \
+  curl -L https://foundry.paradigm.xyz | bash; \
+  ~/.foundry/bin/foundryup --install stable; \
+  install -Dm755 ~/.foundry/bin/* /usr/local/bin/
+# cargo binstall (to install just)
+RUN curl -L --proto '=https' --tlsv1.2 -sSf \
+    https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh \
+    | bash
+ENV BINSTALL_YES=1 \
+    CARGO_TERM_COLOR=never
+# just
+RUN cargo binstall just --no-confirm
+####
+
 # start from rust
 FROM rust:1.85
-
-# install `just`
-RUN \
-  --mount=type=cache,target=$CARGO_HOME/registry,sharing=locked \
-  --mount=type=cache,target=$CARGO_HOME/git,sharing=locked \
-  --mount=type=cache,target=just-target,sharing=locked \
-  cargo install just
-
-# install `foundry`
-ENV SVM_ROOT=/root/.svm
-RUN \
-  --mount=type=cache,target=$CARGO_HOME/registry,sharing=locked \
-  --mount=type=cache,target=$CARGO_HOME/git,sharing=locked \
-  --mount=type=cache,target=foundry-target,sharing=locked \
-  cargo install --git https://github.com/foundry-rs/foundry \
-  --tag v1.1.0 \
-  --profile release --locked --target-dir foundry-target \
-  anvil cast chisel forge
 
 # install general dependencies
 ENV DEBIAN_FRONTEND=noninteractive
@@ -27,10 +27,18 @@ RUN \
   apt-get update && apt-get install -y --no-install-recommends \
   build-essential git wget \
   liblua5.4-dev lua5.4 \
-  libslirp-dev \
   libclang-dev \
   xxd jq sqlite3; \
   rm -rf /var/cache/apt;
+
+# install foundry
+COPY --from=tools /usr/local/bin/forge   /usr/local/bin/
+COPY --from=tools /usr/local/bin/cast    /usr/local/bin/
+COPY --from=tools /usr/local/bin/anvil   /usr/local/bin/
+COPY --from=tools /usr/local/bin/chisel  /usr/local/bin/
+
+# install just
+COPY --from=tools /usr/local/cargo/bin/  /usr/local/bin/
 
 WORKDIR /dave
 
@@ -42,8 +50,8 @@ RUN just -f test/programs/justfile download-deps
 COPY machine/emulator/ machine/emulator/
 WORKDIR /dave/machine/emulator
 RUN make bundle-boost
-RUN make
-RUN make install
+RUN make -C src slirp=no release=yes && make install
+# RUN make -C src clean
 WORKDIR /dave
 
 # install solidity dependencies
@@ -57,7 +65,6 @@ COPY justfile justfile
 
 # builds smart contracts and generate Rust bindings for smart contracts.
 RUN \
-  --mount=type=cache,target=$SVM_ROOT,sharing=locked \
   --mount=type=cache,target=cartesi-rollups/contracts/out,sharing=locked \
   --mount=type=cache,target=cartesi-rollups/contracts/cache,sharing=locked \
   --mount=type=cache,target=prt/contracts/out,sharing=locked \
@@ -67,13 +74,13 @@ RUN \
 # builds test programs and create anvil state dump.
 # requires compiled smart contracts.
 RUN \
-  --mount=type=cache,target=$SVM_ROOT,sharing=locked \
   --mount=type=cache,target=cartesi-rollups/contracts/out,sharing=locked \
   --mount=type=cache,target=cartesi-rollups/contracts/cache,sharing=locked \
   --mount=type=cache,target=prt/contracts/out,sharing=locked \
   --mount=type=cache,target=prt/contracts/cache,sharing=locked \
   just -f test/programs/justfile build-programs
 
+# copy everything else
 COPY \
   --exclude=test/programs \
   --exclude=machine/emulator \
@@ -83,11 +90,11 @@ COPY \
   --exclude=justfile \
   . .
 
+# build rust workspace
 RUN \
   --mount=type=cache,target=target,sharing=locked \
   --mount=type=cache,target=$CARGO_HOME/registry,sharing=locked \
   --mount=type=cache,target=$CARGO_HOME/git,sharing=locked \
-  --mount=type=cache,target=$SVM_ROOT,sharing=locked \
   --mount=type=cache,target=cartesi-rollups/contracts/out,sharing=locked \
   --mount=type=cache,target=cartesi-rollups/contracts/cache,sharing=locked \
   --mount=type=cache,target=prt/contracts/out,sharing=locked \
