--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -4,21 +4,34 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "codegen:graphql": "graphql-codegen",
+    "codegen:watch": "graphql-codegen --watch",
+    "vite:dev": "vite",
+    "vite:build": "tsc -b && vite build",
+    "dev": "run-p codegen:watch vite:dev",
+    "build": "run-s codegen:graphql vite:build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.75.5",
     "daisyui": "^5.0.35",
+    "date-fns": "^4.1.0",
+    "graphql-request": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.16",
     "@eslint/js": "^9.25.0",
+    "@graphql-codegen/cli": "^5.0.6",
+    "@parcel/watcher": "^2.5.1",
+    "@types/node": "^22.15.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -26,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
