--- a/visualization/ui/tsconfig.app.json
+++ b/visualization/ui/tsconfig.app.json
@@ -7,6 +7,14 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    // Plugins
+    "plugins": [
+      {
+        "name": "@0no-co/graphqlsp",
+        "schema": "./graphql/schema.graphql"
+      }
+    ],
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -23,5 +31,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "graphql"]
 }
