--- a/cartesi-rollups/node/cartesi-rollups-prt-node/Cargo.toml
+++ b/cartesi-rollups/node/cartesi-rollups-prt-node/Cargo.toml
@@ -24,6 +24,8 @@ cartesi-prt-core = { workspace = true }
 
 alloy = { workspace = true }
 alloy-transport = { workspace = true }
+alloy-chains = { workspace = true }
+
 anyhow = { workspace = true }
 clap = { workspace = true }
 futures = { workspace = true }
