--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -2,10 +2,9 @@ ECHO_DIR := "../../../test/programs/echo"
 HONEYPOT_DIR := "../../../test/programs/honeypot"
 
 WEB3_PRIVATE_KEY := "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
-MAX_EPOCH := "1"
 
 # run PRT rollups test
-test MACH_PATH:
+test MACH_PATH SCRIPT:
   rm -rf _state
   WEB3_PRIVATE_KEY={{WEB3_PRIVATE_KEY}} \
   ANVIL_PATH=`realpath {{MACH_PATH}}/anvil_state.json` \
@@ -13,16 +12,18 @@ test MACH_PATH:
   APP=`sed '3q;d' {{MACH_PATH}}/addresses` \
   CONSENSUS=`sed '2q;d' {{MACH_PATH}}/addresses` \
   INPUT_BOX=`sed '1q;d' {{MACH_PATH}}/addresses` \
-  MAX_EPOCH={{MAX_EPOCH}} lua prt_rollups.lua && \
-  MAX_EPOCH={{MAX_EPOCH}} lua check_rollups_winner.lua
+  lua test_cases/{{SCRIPT}}.lua
+
+# MAX_EPOCH={{MAX_EPOCH}} lua check_rollups_winner.lua
 
 # run PRT rollups echo test
 test-echo:
-  just test {{ECHO_DIR}}
+  just test {{ECHO_DIR}} simple
 
 # run PRT rollups honeypot test
 test-honeypot:
-  just test {{HONEYPOT_DIR}}
+  just test {{HONEYPOT_DIR}} simple
+  # just test {{HONEYPOT_DIR}} big_input
 
 # read logs from PRT Rollups node, run in separate terminal after `test-echo`
 read-node-logs:
