--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,7 +131,14 @@ jobs:
       - name: Test prt-rollups
         timeout-minutes: 30
         run: |
-          just test-rollups-honeypot
+          just test-rollups-honeypot-ci
+      - name: Show failing log
+        if: failure()
+        run: |
+          echo '▼▼▼ failing-step dave.log ▼▼▼'
+          cat ./prt/tests/rollups/dave.log
+          echo '▲▲▲ end log ▲▲▲'
+
 
   build:
     runs-on: ubuntu-24.04
