--- a/prt/tests/compute/programs/doom/Dockerfile
+++ b/prt/tests/compute/programs/doom/Dockerfile
@@ -1,4 +1,4 @@
-FROM cartesi/machine-emulator:0.19.0-alpha3
+FROM cartesi/machine-emulator:0.19.0
 USER root
 ENV FREEDOOM_VER=v0.2.0
 ENV KERNEL_VER=v0.19.1-riv1
