--- a/cartesi-rollups/contracts/cannonfile.prod-instance.toml
+++ b/cartesi-rollups/contracts/cannonfile.prod-instance.toml
@@ -7,7 +7,7 @@ appOwner = "<%= zeroAddress %>"
 initialHash = "<%= zeroHash %>"
 
 [pull.cartesiRollups]
-source = "cartesi-rollups:2.0.0-rc.18@main"
+source = "cartesi-rollups:2.0.0@main"
 
 [pull.prtContracts]
 source = "cartesi-prt-multilevel:0.1.0-rc.4@main"
