--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -34,3 +34,15 @@ test-honeypot-case CASE:
 # read logs from PRT Rollups node, run in separate terminal after `test-echo`
 read-node-logs:
   cat dave.log; tail -f dave.log
+
+# sepolia-honeypot
+download-sepolia-honeypot: clean-sepolia-honeypot-snapshot
+  mkdir -p sepolia/machine-image
+  curl -L \
+    https://github.com/cartesi/honeypot/releases/download/v2.0.0-rc-3/honeypot-snapshot-sepolia.tar.gz | \
+    tar -xz -C sepolia/machine-image
+clean-sepolia-honeypot-snapshot:
+  rm -rf sepolia/machine-image
+
+run-sepolia SCRIPT:
+  ( set -a; source sepolia/.env; exec lua sepolia/{{SCRIPT}}.lua)
