--- a/prt/contracts/cannonfile.toml
+++ b/prt/contracts/cannonfile.toml
@@ -12,7 +12,7 @@ testnetMaxAllowance = "<%= 60 * 60 * 8 + 60 * 60 %>"
 
 [var.DevnetTournamentConstants]
 devnetMatchEffort = "<%= 60 * 5 * 92 %>"
-devnetMaxAllowance = "<%= 60 * 60 * 8 + 60 * 60 %>"
+devnetMaxAllowance = "<%= 60 * 60 %>"
 
 [var.Chain]
 chainType = "<%= ({1: 'mainnet', 13370: 'devnet', 31337: 'devnet', 11155111: 'testnet'})[chainId] %>"
