chore: Remove all graphQL and current components

--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -4,32 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "codegen:graphql": "graphql-codegen",
-    "codegen:watch": "graphql-codegen --watch",
-    "vite:dev": "vite",
-    "vite:build": "tsc -b && vite build",
-    "dev": "run-p codegen:watch vite:dev",
-    "build": "run-s codegen:graphql vite:build",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@graphql-typed-document-node/core": "^3.2.0",
     "@tanstack/react-query": "^5.75.5",
     "date-fns": "^4.1.0",
-    "graphql-request": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.16",
     "@chromatic-com/storybook": "^4.0.1",
     "@eslint/js": "^9.25.0",
-    "@graphql-codegen/cli": "^5.0.6",
     "@parcel/watcher": "^2.5.1",
     "@storybook/addon-a11y": "^9.0.13",
     "@storybook/addon-docs": "^9.0.13",
