--- a/visualization/ui/tsconfig.app.json
+++ b/visualization/ui/tsconfig.app.json
@@ -7,14 +7,6 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    // Plugins
-    "plugins": [
-      {
-        "name": "@0no-co/graphqlsp",
-        "schema": "./graphql/schema.graphql"
-      }
-    ],
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -31,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "graphql"]
+  "include": ["src"]
 }
