--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -12,6 +12,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mantine/core": "^8.1.2",
+    "@mantine/hooks": "^8.1.2",
     "@tanstack/react-query": "^5.75.5",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
@@ -37,6 +39,9 @@
     "eslint-plugin-storybook": "^9.0.13",
     "globals": "^16.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "storybook": "^9.0.13",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
