--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -46,5 +46,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  }
+  },
+  "packageManager": "pnpm@10.7.0"
 }
