--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "viem": "^2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
