--- a/visualization/ui/tsconfig.app.json
+++ b/visualization/ui/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "mantine.d.ts"]
 }
