--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -1,52 +1,55 @@
 {
-  "name": "ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@mantine/core": "^8.1.2",
-    "@mantine/hooks": "^8.1.2",
-    "@tanstack/react-query": "^5.75.5",
-    "date-fns": "^4.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router": "^7.5.3",
-    "viem": "^2"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.0",
-    "@eslint/js": "^9.25.0",
-    "@parcel/watcher": "^2.5.1",
-    "@storybook/addon-a11y": "^9.1.2",
-    "@storybook/addon-docs": "^9.1.2",
-    "@storybook/addon-onboarding": "^9.1.2",
-    "@storybook/react-vite": "^9.1.2",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.1.2",
-    "globals": "^16.0.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.5.6",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "storybook": "^9.1.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  },
-  "packageManager": "pnpm@10.7.0"
+    "name": "ui",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "format:check": "prettier \"**/*.{ts,tsx}\" --check",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    },
+    "dependencies": {
+        "@mantine/core": "^8.1.2",
+        "@mantine/hooks": "^8.1.2",
+        "@tanstack/react-query": "^5.75.5",
+        "date-fns": "^4.1.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
+        "react-router": "^7.5.3",
+        "viem": "^2"
+    },
+    "devDependencies": {
+        "@chromatic-com/storybook": "^4.1.0",
+        "@eslint/js": "^9.25.0",
+        "@parcel/watcher": "^2.5.1",
+        "@storybook/addon-a11y": "^9.1.2",
+        "@storybook/addon-docs": "^9.1.2",
+        "@storybook/addon-onboarding": "^9.1.2",
+        "@storybook/react-vite": "^9.1.2",
+        "@types/node": "^22.15.17",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@vitejs/plugin-react": "^4.4.1",
+        "eslint": "^9.25.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "eslint-plugin-storybook": "^9.1.2",
+        "globals": "^16.0.0",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.5.6",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
+        "prettier": "^3.6.2",
+        "storybook": "^9.1.2",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.30.1",
+        "vite": "^6.3.5"
+    },
+    "packageManager": "pnpm@10.7.0"
 }
