feat(visualization): Tournament

--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@mantine/core": "^8.1.2",
         "@mantine/hooks": "^8.1.2",
+        "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-query": "^5.75.5",
         "date-fns": "^4.1.0",
         "react": "^19.1.0",
@@ -51,5 +52,5 @@
         "typescript-eslint": "^8.30.1",
         "vite": "^6.3.5"
     },
-    "packageManager": "pnpm@10.7.0"
+    "packageManager": "pnpm@10.14.0"
 }
