--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@mantine/core": "^8.1.2",
         "@mantine/hooks": "^8.1.2",
+        "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-query": "^5.75.5",
         "date-fns": "^4.1.0",
