--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -19,6 +19,7 @@
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-query": "^5.75.5",
+        "d3": "^7.9.0",
         "date-fns": "^4.1.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -34,6 +35,7 @@
         "@storybook/addon-docs": "^9.1.2",
         "@storybook/addon-onboarding": "^9.1.2",
         "@storybook/react-vite": "^9.1.2",
+        "@types/d3": "^7.4.3",
         "@types/node": "^22.15.17",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
