--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -14,13 +14,16 @@
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "dependencies": {
-        "@mantine/core": "^8.1.2",
-        "@mantine/hooks": "^8.1.2",
+        "@mantine/carousel": "^8.2.7",
+        "@mantine/core": "^8.2.7",
+        "@mantine/hooks": "^8.2.7",
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-query": "^5.75.5",
         "d3": "^7.9.0",
         "date-fns": "^4.1.0",
+        "embla-carousel": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
@@ -55,5 +58,5 @@
         "typescript-eslint": "^8.30.1",
         "vite": "^6.3.5"
     },
-    "packageManager": "pnpm@10.14.0"
+    "packageManager": "pnpm@10.15.0"
 }
