--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -21,6 +21,7 @@
         "@tanstack/react-query": "^5.75.5",
         "d3": "^7.9.0",
         "date-fns": "^4.1.0",
+        "humanize-duration": "^3.33.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
@@ -36,6 +37,7 @@
         "@storybook/addon-onboarding": "^9.1.3",
         "@storybook/react-vite": "^9.1.3",
         "@types/d3": "^7.4.3",
+        "@types/humanize-duration": "^3.27.4",
         "@types/node": "^22.15.17",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
