--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,6 +104,8 @@ jobs:
           submodules: recursive
       - name: Setup tools
         uses: ./.github/actions/setup-tools
+        with:
+          foundry_version: 'v1.1.0'
       - name: Install Cartesi Machine
         uses: ./.github/actions/cartesi-machine
         with:
@@ -149,6 +151,8 @@ jobs:
 
       - name: Setup tools
         uses: ./.github/actions/setup-tools
+        with:
+          foundry_version: 'v1.1.0'
 
       - name: Install dependencies
         env:
