--- a/prt/client-rs/core/Cargo.toml
+++ b/prt/client-rs/core/Cargo.toml
@@ -46,5 +46,9 @@ rusqlite_migration = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+# RISC Zero integration
+cartesi_risc0 = { path = "../../../machine/emulator/risc0/rust/cartesi-risc0" }
+ethabi = "18.0"
+
 [dev-dependencies]
 tempfile = "3"
