--- a/prt/contracts/foundry.toml
+++ b/prt/contracts/foundry.toml
@@ -9,6 +9,8 @@ allow_paths = ['../../machine/step/']
 remappings = [
     'prt-contracts/=./src',
     'step/=../../machine/step/',
+    'risc0/=./dependencies/risc0-ethereum/contracts/src/',
+    'openzeppelin/contracts/=./dependencies/@openzeppelin-contracts-5.2.0/',
 ]
 solc-version = "0.8.27"
 
