--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -21,6 +21,7 @@
         "@tanstack/react-query": "^5.75.5",
         "date-fns": "^4.1.0",
         "humanize-duration": "^3.33.0",
+        "ramda": "^0.31.3",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
@@ -38,6 +39,7 @@
         "@types/d3": "^7.4.3",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "^22.15.17",
+        "@types/ramda": "^0.31.1",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react": "^4.4.1",
