--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -14,10 +14,6 @@ test MACH_PATH SCRIPT:
   INPUT_BOX=`sed '1q;d' {{MACH_PATH}}/addresses` \
   lua test_cases/{{SCRIPT}}.lua
 
-# run PRT rollups echo test
-test-echo:
-  just test {{ECHO_DIR}} simple
-
 # run PRT rollups honeypot test
 test-honeypot-all:
   just test {{HONEYPOT_DIR}} stf_all
@@ -25,11 +21,24 @@ test-honeypot-all:
   just test {{HONEYPOT_DIR}} gc_match
   just test {{HONEYPOT_DIR}} gc_tournament
 
+# run PRT rollups echo test
+test-echo-all:
+  just test {{ECHO_DIR}} stf_all
+  just test {{ECHO_DIR}} big_input
+  just test {{ECHO_DIR}} gc_match
+  just test {{ECHO_DIR}} gc_tournament
+
 test-honeypot-ci:
   just test {{HONEYPOT_DIR}} simple
 
+test-echo-ci:
+  just test {{ECHO_DIR}} simple
+
 test-honeypot-case CASE:
   just test {{HONEYPOT_DIR}} {{CASE}}
+
+test-echo-case CASE:
+  just test {{ECHO_DIR}} {{CASE}}
 
 # read logs from PRT Rollups node, run in separate terminal after `test-echo`
 read-node-logs:
