--- a/test/programs/justfile
+++ b/test/programs/justfile
@@ -9,11 +9,20 @@ clean-deps:
   rm -f linux.bin
 
 # all programs
-build-programs: build-echo build-honeypot build-compute
-clean-programs: clean-echo clean-honeypot
+build-programs: build-yield build-echo build-honeypot build-compute
+clean-programs: clean-yield clean-echo clean-honeypot
 clean-program prog:
   rm -f {{prog}}/_anvil.log {{prog}}/addresses {{prog}}/anvil_state.json
   rm -rf {{prog}}/machine-image
+
+# yield
+build-yield: clean-yield
+  cartesi-machine --ram-image=./linux.bin \
+    --flash-drive=label:root,filename:./rootfs.ext2 \
+    --no-rollback --store=./yield/machine-image \
+    -- "while true; do yield manual rx-accepted; yield manual rx-rejected; done"
+  ./build_anvil_state.sh "yield"
+clean-yield: (clean-program "yield")
 
 # echo
 build-echo: clean-echo
