--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -14,49 +14,52 @@
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "dependencies": {
-        "@mantine/core": "^8.2.7",
-        "@mantine/hooks": "^8.2.7",
+        "@mantine/core": "^8.3.2",
+        "@mantine/hooks": "^8.3.2",
         "@raugfer/jazzicon": "^1.0.6",
-        "@tabler/icons-react": "^3.34.1",
-        "@tanstack/react-query": "^5.75.5",
+        "@tabler/icons-react": "^3.35.0",
+        "@tanstack/react-query": "^5.90.2",
         "date-fns": "^4.1.0",
-        "humanize-duration": "^3.33.0",
+        "humanize-duration": "^3.33.1",
         "ramda": "^0.31.3",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-icons": "^5.5.0",
-        "react-router": "^7.5.3",
-        "viem": "^2"
+        "react-router": "^7.9.2",
+        "viem": "^2.37.8"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^4.1.1",
-        "@eslint/js": "^9.25.0",
+        "@eslint/js": "^9.36.0",
         "@parcel/watcher": "^2.5.1",
-        "@storybook/addon-a11y": "^9.1.3",
-        "@storybook/addon-docs": "^9.1.3",
-        "@storybook/addon-onboarding": "^9.1.3",
-        "@storybook/react-vite": "^9.1.3",
+        "@storybook/addon-a11y": "^9.1.8",
+        "@storybook/addon-docs": "^9.1.8",
+        "@storybook/addon-onboarding": "^9.1.8",
+        "@storybook/react-vite": "^9.1.8",
         "@types/d3": "^7.4.3",
         "@types/humanize-duration": "^3.27.4",
-        "@types/node": "^22.15.17",
+        "@types/node": "^22.18.6",
         "@types/ramda": "^0.31.1",
-        "@types/react": "^19.1.2",
-        "@types/react-dom": "^19.1.2",
-        "@vitejs/plugin-react": "^4.4.1",
-        "eslint": "^9.25.0",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
+        "@vitejs/plugin-react": "^4.7.0",
+        "eslint": "^9.36.0",
         "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "eslint-plugin-storybook": "^9.1.3",
-        "globals": "^16.0.0",
+        "eslint-plugin-react-refresh": "^0.4.21",
+        "eslint-plugin-storybook": "^9.1.8",
+        "globals": "^16.4.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.6",
-        "postcss-preset-mantine": "^1.17.0",
+        "postcss-preset-mantine": "^1.18.0",
         "postcss-simple-vars": "^7.0.1",
         "prettier": "^3.6.2",
-        "storybook": "^9.1.3",
-        "typescript": "~5.8.3",
-        "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5"
+        "storybook": "^9.1.8",
+        "typescript": "^5.9.2",
+        "typescript-eslint": "^8.44.1",
+        "vite": "^6.3.6"
     },
-    "packageManager": "pnpm@10.15.0"
+    "packageManager": "pnpm@10.15.0",
+    "engines": {
+        "node": "^22"
+    }
 }
