--- a/visualization/ui/package.json
+++ b/visualization/ui/package.json
@@ -19,6 +19,7 @@
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.35.0",
         "@tanstack/react-query": "^5.90.2",
+        "@vercel/analytics": "^1.5.0",
         "date-fns": "^4.1.0",
         "humanize-duration": "^3.33.1",
         "ramda": "^0.31.3",
