fix(prt): fix match sentinel init bug
Remove constant fields from Match.State
Improve documentation
Make tournament arguments public
Make `TournamentArgs` scoped inside Tournament
Cleanup funtion order

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           just check-fmt
           just build-smart-contracts
-          just test
+          just test-disputes
+          just test-stf
 
   dave-contracts:
     runs-on: ubuntu-24.04
