feat(prt-contracts): enrich events args

--- a/prt/contracts/cannonfile.dev-instance.toml
+++ b/prt/contracts/cannonfile.dev-instance.toml
@@ -17,5 +17,5 @@ args = [
     "<%= settings.dataProvider %>",
 ]
 factory.TopTournamentInstance.abiOf = ["prtContracts.TopTournament"]
-factory.TopTournamentInstance.event = "tournamentCreated"
+factory.TopTournamentInstance.event = "TournamentCreated"
 factory.TopTournamentInstance.arg = 0
